# chess

./: CMakeLists.txt
scripts/: build.sh  run.sh  test.sh
src/: bitboard.c  bitboard.h  game.c  game.h  misc.c  misc.h  move.c  move.h  move_gen.c  move_gen.h  move_list.c  move_list.h  perft.c  perft.h
test/: bitboard_test.c  game_test.c  move_test.c  perft_test.c  test_utils.h
